# yeetee

./: CMakeLists.txt  README.md
.chain/b75bd16/: alfasign.tsr  digicert.tsr  eth-anchor.json  globalsign.tsr  manifest.txt  manifest.txt.ots  qsig.asice
.chain/c3d1be5/: alfasign.tsr  digicert.tsr  eth-anchor.json  globalsign.tsr  manifest.txt  manifest.txt.ots  qsig.asice  sectigo.tsr
.chain/c508385/: alfasign.tsr  digicert.tsr  eth-anchor.json  globalsign.tsr  manifest.txt  manifest.txt.ots  qsig.asice  sectigo.tsr
.chain/dd28f21/: alfasign.tsr  digicert.tsr  eth-anchor.json  globalsign.tsr  manifest.txt  manifest.txt.ots  qsig.asice  sectigo.tsr
include/yeetee/: yeetee.h
include/yeetee/api/: innertube.h  json.h  ytdlp.h
include/yeetee/auth/: oauth.h  token.h
include/yeetee/core/: conf.h  err.h
include/yeetee/player/: player.h  render.h
include/yeetee/tui/: feed.h  input.h  layout.h  queue.h  thumb.h  tui.h
src/: main.c
src/api/: innertube.c  json.c  ytdlp.c
src/auth/: oauth.c  token.c
src/core/: conf.c  err.c
src/player/: player.c  render.c
src/tui/: feed.c  input.c  layout.c  queue.c  thumb.c  tui.c
tests/: test_api.c  test_auth.c  test_player.c  test_tui.c
